# vortex-public

./: .env.sample  .gitignore  Cargo.toml  README.md  config.sample.json  hydranet-config.sample.json
.github/workflows/: rust.yml
docker/: Dockerfile
hydranet-api/: Cargo.toml  build.rs
hydranet-api/protos/: lssdrpc.proto
hydranet-api/src/: balance.rs  config.rs  connext.rs  info.rs  lib.rs  orderbook.rs  orders.rs  trades.rs  utils.rs
vortex-bot/: Cargo.toml
vortex-bot/src/: config.rs  main.rs
vortex-bot/src/strategies/: arbitrage.rs  grid.rs  mod.rs  volume_maker.rs
vortex-core/: Cargo.toml
vortex-core/src/: exchange.rs  lib.rs  market.rs
vortex-core/src/api/: balance.rs  info.rs  mod.rs  orderbook.rs  orders.rs  price_feed.rs  trades.rs
vortex-core/src/types/: balance.rs  info.rs  mod.rs  orderbook.rs  orders.rs  stats.rs  trades.rs  update.rs
