[workspace]
members = ["vortex-bot", "vortex-core", "hydranet-api"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tracing = "0.1"

[profile.release]
opt-level = 's'   # Size optimizations
lto = true        # Link-time-optimizations for further size reduction
codegen-units = 1 # Better optimizations
debug = true      # Symbols are nice and they don't increase the size

[profile.dev]
overflow-checks = false