[package]
name = "hydranet-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

async-stream = "0.3"
dotenv = "0.15"
prost = "0.12"
reqwest = "0.11"
serde_json = "1.0"
tonic = "0.10"

alloy-primitives = { version= "0.5", features = ["serde"] }

vortex-core = { path = "../vortex-core" }
lnd_client = { git = "https://github.com/hydra-net/lnd-client" }
#lnd_client = { path = "../../../vortex/lnd-client"}

[build-dependencies]
tonic-build = "0.10"
