[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

config = "0.13"
dotenv = "0.15"
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

vortex-core = { path = "../vortex-core" }

hydranet-api = { path = "../hydranet-api" }

